grammar.js
/**
 * @file Tree Sitter grammar for Prolog syntax, specifically SWI Prolog
 * @author eignnx <eignnx@gmail.com>
 * @license AGPL-3.0-or-later
 *
 * Lexical analysis definitions: https://www.swi-prolog.org/pldoc/man?section=syntax
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: "swiprolog",

  extras: $ => [
    /\s+/,
    $.eol_comment,
    $.multiline_comment,
  ],

  conflicts: $ => [
    [$.non_comma_operator, $.graphic_char_atom],
  ],

  externals: $ => [
    $.read_term_end_token,
    $.quasi_quotation_body,
  ],

  rules: {
    source_file: $ => repeat($.read_term),

    read_term: $ => seq(
      $._term,
      $.read_term_end_token,
    ),

    _term: $ => choice(
      $._atomic_term,
      $.prefix_operator_term,
      $.binop_term,
    ),

    _restricted_operators_term: $ => choice(
      $._atomic_term,
      $.prefix_operator_term,
      $.restricted_binop_term,
    ),

    _atomic_term: $ => choice(
      $.compound_term,
      prec(2, $.atom),
      prec(1, $.variable),
      $.string,
      $.integer,
      $.rational,
      $.float,
      $.character_literal,
      $.parenthesized_term,
      $.list_literal,
      $.curly_braced_term,
      $.dict_literal,
      prec(50, $.quasi_quotation),
    ),

    compound_term: $ => prec(100, seq(
      field("functor", $.atom),
        "(",
        prec(5, $._restricted_operators_term),
        repeat(seq(
          ",",
          prec(5, $._restricted_operators_term),
        )),
        ")",
    )),

    atom: $ => choice(
      $.unquoted_atom,
      $.quoted_atom,
      choice(
        $.graphic_char_atom,
        "!",
      ),
    ),

    graphic_char_atom: $ => /[-+*/\\^<>=~:.?@#$&]+/,

    variable: $ => /[\p{Lu}_][\p{XID_Continue}¹²³⁰-⁹₀-₉]*/v,

    unquoted_atom: $ => /[\p{XID_Start}--\p{Lu}--_][\p{XID_Continue}¹²³⁰-⁹₀-₉]*/v,

    quoted_atom: $ => seq(
      /'/,
      repeat($._single_quoted_inner),
      /'/,
    ),

    _single_quoted_inner: $ => choice(
      $.single_quoted_character_escape,
      $.format_string_placeholder,
      $.single_quoted_content,
    ),

    format_string_placeholder: $ => token.immediate(seq(
      "~",
      choice(
        /(`.)?t/,
        seq(
          optional(/\d+|\*/),
          optional(":"),
          /[acd~DeEgfGiknNpqrR@s\|\+wW]/
        ),
      )
    )),

    single_quoted_character_escape: $ => /\\[nrtvc\\']/,
    single_quoted_content: $ => /[^\\~']+/,

    string: $ => choice(
      $.double_quoted_string,
      $.backtick_string,
    ),

    double_quoted_string: $ => seq(
      /"/,
      repeat($._double_quoted_string_inner),
      /"/,
    ),
    _double_quoted_string_inner: $ => choice(
      $.format_string_placeholder,
      $.double_quoted_character_escape,
      $.double_quoted_content,
    ),
    double_quoted_character_escape: $ => /\\[nrtv\\"]/,
    double_quoted_content: $ => /[^\\~"]+/,

    backtick_string: $ => seq(
      /`/,
      repeat($._backtick_string_inner),
      /`/,
    ),
    _backtick_string_inner: $ => choice(
      $.format_string_placeholder,
      $.backticked_character_escape,
      $.backticked_content,
    ),
    backticked_character_escape: $ => /\\[nrtv\\`]/,
    backticked_content: $ => /[^\\~`]+/,

    list_literal: $ => prec(100, choice(
      seq("[", "]"),
      seq(
        "[",
        prec(15, $._restricted_operators_term),
        prec.left(50, repeat(seq(",", prec(15, $._restricted_operators_term)))),
        optional(seq("|", $._term)),
        "]",
      ),
    )),

    integer: $ => choice(
      /0[xX][0-9a-fA-F_]+/,
      /0b[01_]+/,
      /0o[0-7_]+/,
      /[-+]?[1-9][0-9_]*/,
      /[-+]?0/,
    ),

    rational: $ => /-?[0-9]+r[0-9]+/,

    float: $ => /[-+]?[0-9]*\.[0-9]+([eE][-+]?[0-9]+)?/,

    character_literal: $ => choice(
      /0'[a-zA-Z0-9.!@#$%^&*();:"'<>,./?|~`]/,
      /0'\\\\/, // Backslash itself
      /0'\\[btnvfreda]/,
      /0'\\[xX][0-9a-fA-F]{2}\\?/,
      /0'\\u[0-9a-fA-F]{4}/,
      /0'\\U[0-9a-fA-F]{8}/,
      /0'\\[0-7]{1,3}/,
    ),

    restricted_binop_term: $ => prec.right(seq(
      field("r_left", $._restricted_operators_term),
      field("r_operator", $.non_comma_operator),
      field("r_right", $._restricted_operators_term),
    )),

    binop_term: $ => prec.right(seq(
      field("left", $._term),
      field("operator", $.operator),
      field("right", $._term),
    )),

    // Ascii chars "glue" together into compound operators, but these other
    // general unicode characters are read as single-character operators.
    operator: $ => choice(
      $.non_comma_operator,
      ",",
    ),
    non_comma_operator: $ => choice(
      ";",
      "is",
      "in",
      "div",
      "mod",
      "xor",
      /[-+*/\\^<>=~:.?@#$&]+/,
      // Sm = Math symbols:
      //   > Mathematical symbols (e.g., +, −, =, ×, ÷, √, ∊, ≠). Does not
      //   > include parentheses and brackets, which are in categories Ps and
      //   > Pe. Also does not include !, *, -, or /, which despite frequent
      //   > use as mathematical operators, are primarily considered to be
      //   > "punctuation".
      // Sc = Currency symbols
      // Sk = Modifier symbol
      // So = Other symbols
      //
      // Pc = Connector punctuation
      //   > Includes spacing underscore characters such as "_", and other
      //   > spacing tie characters. Unlike other punctuation characters, these
      //   > may be classified as "word" characters by regular expression
      //   > libraries.
      // Pd = Dash punctuation
      //   > Includes several hyphen characters
      // Po = Other punctuation
      //
      // Note: `%` is never seen as part of an operator.
      // Note: I'm assuming underscore `_` should not be included here as a
      //       standalone operator (`X = (a _ b).` does not parse).
      /[[\p{Sm}\p{Sc}\p{Sk}\p{So}\p{Pc}\p{Pd}\p{Po}]--[%_]]/v
    ),

    prefix_operator_term: $ => prec(100, seq(
      field("operator", $.non_comma_operator),
      field("operand", $._term),
    )),

    parenthesized_term: $ => seq("(", $._term, ")"),
    curly_braced_term: $ => choice(
      seq("{", optional($._term), "}"),
    ),

    dict_literal: $ => seq(
      field("tag", choice($.atom, $.variable)),
      field("keys_values", delimited_comma_sep("{", $.dict_key_value_pair, "}")),
    ),

    dict_key_value_pair: $ => prec.left(20, seq(
      field("dict_key", $._non_graphic_char_atom),
      ":",
      field("dict_value", $._restricted_operators_term),
    )),

    _non_graphic_char_atom: $ => choice(
      $.unquoted_atom,
      $.quoted_atom,
    ),

    eol_comment: $ => /%.*/,

    multiline_comment: $ => /\/\*([^*]|\*[^/])*(\*\/)?/,

    quasi_quotation: $ => seq(
      "{|",
      field("syntax", choice($.atom, $.compound_term)),
      "||",
      field("quotation", $.quasi_quotation_body),
      "|}",
    ),

  },
});

function delimited_comma_sep(open, item, close) {
  return seq(
    open,
    optional(seq(item, repeat(seq(",", item)))),
    close,
  )
}
